--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
           <artifactId>javafx-maven-plugin</artifactId>
           <version>0.0.3</version>
           <configuration>
-              <mainClass>HelloFX</mainClass>
+              <mainClass>HFX</mainClass>
           </configuration>
         </plugin>
       </plugins>
