--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
         <version>1.11.3</version>
     </dependency>
 
+    <dependency>
+        <groupId>net.sourceforge.htmlunit</groupId>
+        <artifactId>htmlunit</artifactId>
+        <version>2.36.0</version>
+    </dependency>
 
   </dependencies>
 
