--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
         <version>2.36.0</version>
     </dependency>
 
+    <dependency>
+        <groupId>com.jfoenix</groupId>
+        <artifactId>jfoenix</artifactId>
+        <version>8.0.9</version>
+    </dependency>
   </dependencies>
 
   <build>
