--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,13 @@
     <dependency>
         <groupId>com.jfoenix</groupId>
         <artifactId>jfoenix</artifactId>
-        <version>8.0.9</version>
+        <version>8.0.8</version>
+    </dependency>
+
+    <dependency>
+        <groupId>de.jensd</groupId>
+        <artifactId>fontawesomefx</artifactId>
+        <version>8.9</version>
     </dependency>
   </dependencies>
 
