--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     implementation 'net.sourceforge.htmlunit:htmlunit:2.36.0'
     implementation 'com.jfoenix:jfoenix:8.0.8'
     implementation 'de.jensd:fontawesomefx:8.9'
+    implementation 'com.github.wasiqb.coteafs:selenium:3.2.0'
 }
 
 group = 'seniorproject'
